// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should render correctly 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "fontFamily": "Inter_500Medium",
          "fontSize": 15,
          "lineHeight": 16,
          "paddingVertical": 15,
          "width": "100%",
        },
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    value="user name"
  />
</View>
`;

exports[`TextInput Component should render placeholder 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Enter your username"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "fontFamily": "Inter_500Medium",
          "fontSize": 15,
          "lineHeight": 16,
          "paddingVertical": 15,
          "width": "100%",
        },
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    value="user name"
  />
</View>
`;

exports[`TextInput Component should render with label correctly 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "#8F959E",
          "fontFamily": "Inter_400Regular",
          "fontSize": 13,
          "lineHeight": 14,
        },
        undefined,
      ]
    }
  >
    Username
  </Text>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "fontFamily": "Inter_500Medium",
          "fontSize": 15,
          "lineHeight": 16,
          "paddingVertical": 15,
          "width": "100%",
        },
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    value="user name"
  />
</View>
`;
